constraint_setting(
    name = "is_bookworm32",
    default_constraint_value = ":false",
)

constraint_value(
    name = "true",
    constraint_setting = ":is_bookworm32",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "false",
    constraint_setting = ":is_bookworm32",
)

config_setting(
    name = "bookworm32",
    constraint_values = [":true"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "bookworm32_debug",
    constraint_values = [":true"],
    values = {
        "compilation_mode": "dbg",
    },
    visibility = ["//visibility:public"],
)
