constraint_setting(
    name = "is_systemcore",
    default_constraint_value = ":false",
)

constraint_value(
    name = "true",
    constraint_setting = ":is_systemcore",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "false",
    constraint_setting = ":is_systemcore",
)

config_setting(
    name = "systemcore",
    constraint_values = [":true"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "systemcore_debug",
    constraint_values = [":true"],
    values = {
        "compilation_mode": "dbg",
    },
    visibility = ["//visibility:public"],
)
